# momentra_app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  _api_spec_extract.txt  design_expense_photos.md  extract_paths.py  pyrightconfig.json  recover_web.py  recover_web2.py  recover_web3.py  recover_web_final.py
backend/: .dockerignore  .env.example  .gitignore  DOKPLOY.md  Dockerfile  dev.db  docker-compose.firebase-file.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_dev.py  schema.sql  test_api.py  test_business.py  test_group.py  test_notifications.py  test_personal_schemas.py  test_security.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  postgrest_rows.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  audit_logger.py  auth.py  compat.py  config.py  database.py  db.py  firebase.py  security.py  supabase.py
backend/app/intelligence/: __init__.py  anomaly_detection.py  forecasting.py  recommendation_engine.py  router.py  rules_engine.py  schemas.py
backend/app/middleware/: __init__.py  audit.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  analytics.py  business.py  group.py  moment.py  notifications.py  personal.py  phase10.py  phase12.py  security.py  user.py
backend/app/routers/: business.py  group.py  health.py  me.py  personal.py  storage.py  users.py
backend/app/schemas/: __init__.py  auth.py  business.py  group.py  moments.py  (+6 more)
backend/scripts/: bill_reminder_push.py  crontab.txt  migrate_group_expense_splits.py
backend/tests/: test_business_mvp.py  test_personal_schemas.py
(+451 files in other folders)
